# vcpkg-caching-test

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: windows-vcpkg-cgal.yml
